@@ -999,7 +999,22 @@ void CME::parse (Setting *data)
     config.closePlugin("Futures");
     return;
   }
-  
+
+  // verify if this chart can be updated by this plugin
+  s = db->getHeaderField(DbPlugin::QuotePlugin);
+  if (! s.length())
+    db->setHeaderField(DbPlugin::QuotePlugin, pluginName);
+  else
+  {
+    if (s.compare(pluginName))
+    {
+      s = data->getData("Symbol") + " - skipping update. Source does not match destination.";
+      emit statusLogMessage(s);
+      config.closePlugin("Futures");
+      return;
+    }
+  }
+      
   s = db->getHeaderField(DbPlugin::Symbol);
   if (! s.length())
   {
